# xml_magic

./: Cargo.toml  LICENSE  README.md
src/: main.rs
