[package]
name = "xml_magic"
authors = ["bolli24"]
description = "A reasonably fast XML formatter."
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bolli24/xml_magic"
keywords = ["xml", "formatter", "cli"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[dependencies]
xml = "0.8"
clap = { version = "4.5", features = ["derive"] }


[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "bin"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWR/9qIFIPtKkjktb3lHpuHDR+617mVHdYt2iq0jdcy/xWumrOlOf0Sg"
